Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-1558

Removing bind mount in the network isolator has race condition

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • None
    • None
    • None

    Description

      Say there are two containers: A and B. Here is the sequence of events:

      1) A is launched and running
      2) B is cloned
      3) Before B executes child isolation scripts which remove all bind mounts under /var/run/netns, A exits.
      4) A tries to remove it's corresponding bind mount under /var/run/netns
      5) A gets a "device is busy" error

      Attachments

        Activity

          People

            jieyu Jie Yu
            jieyu Jie Yu
            Vinod Kone Vinod Kone
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: