Used shared bind mount to fix MESOS-1558.

Review: https://reviews.apache.org/r/23246